#8397 dočasné vypnutí nových funkcí v open api
