# elza/elza-core/src/main/java/cz/tacr/elza/controller/AccessPointController.java
@@ -155,73 +155,73 @@ public class AccessPointController implements AccesspointsApi {
         return ResponseEntity.ok().build();
     }
 
-    /**
-     * Změna stavu přístupového bodu.
-     *
-     * @param accessPointId identifikátor přístupového bodu
-     * @param apVersion     verze přístupového bodu
-     * @param ApStateChange nový stav přístupového bodu
-     * @return nová verze = verze + 1
-     */
-    @Override
-    @Transactional
-    public ResponseEntity<Integer> changeState(Integer accessPointId, Integer apVersion, ApStateChangeVO stateChange) {
-        Validate.notNull(stateChange.getState(), "AP State is null");
+//    /**
+//     * Změna stavu přístupového bodu.
+//     *
+//     * @param accessPointId identifikátor přístupového bodu
+//     * @param apVersion     verze přístupového bodu
+//     * @param ApStateChange nový stav přístupového bodu
+//     * @return nová verze = verze + 1
+//     */
+//    @Override
+//    @Transactional
+//    public ResponseEntity<Integer> changeState(Integer accessPointId, Integer apVersion, ApStateChangeVO stateChange) {
+//        Validate.notNull(stateChange.getState(), "AP State is null");
+//
+//        ApAccessPoint accessPoint = accessPointService.getAccessPoint(accessPointId);
+//        ApState state = accessPointService.getApState(accessPoint);
+//        ApRevision revision = revisionService.findRevisionByState(state);
+//
+//        // Nelze změnit stav archivní entity, která má revizi
+//        if (revision != null) {
+//            throw new BusinessException("Nelze změnit stav archivní entity, která má revizi", RegistryCode.CANT_CHANGE_STATE_ENTITY_WITH_REVISION);
+//        }
+//
+//        accessPointService.updateApState(accessPoint, stateChange.getState(), stateChange.getComment(), stateChange.getTypeId(), stateChange.getScopeId());
+//        accessPointService.updateAndValidate(accessPointId);
+//        if (accessPointService.isRevalidaceRequired(state.getStateApproval(), stateChange.getState())) {
+//            ruleService.revalidateNodes(accessPointId); // TODO temporary cover
+//        }
+//        apCacheService.createApCachedAccessPoint(accessPointId);
+//
+//        Integer version = accessPointService.lockAccessPoint(accessPointId, apVersion);
+//        return ResponseEntity.ok(version);
+//    }
 
-        ApAccessPoint accessPoint = accessPointService.getAccessPoint(accessPointId);
-        ApState state = accessPointService.getApState(accessPoint);
-        ApRevision revision = revisionService.findRevisionByState(state);
-
-        // Nelze změnit stav archivní entity, která má revizi
-        if (revision != null) {
-            throw new BusinessException("Nelze změnit stav archivní entity, která má revizi", RegistryCode.CANT_CHANGE_STATE_ENTITY_WITH_REVISION);
-        }
-
-        accessPointService.updateApState(accessPoint, stateChange.getState(), stateChange.getComment(), stateChange.getTypeId(), stateChange.getScopeId());
-        accessPointService.updateAndValidate(accessPointId);
-        if (accessPointService.isRevalidaceRequired(state.getStateApproval(), stateChange.getState())) {
-            ruleService.revalidateNodes(accessPointId); // TODO temporary cover
-        }
-        apCacheService.createApCachedAccessPoint(accessPointId);
-
-        Integer version = accessPointService.lockAccessPoint(accessPointId, apVersion);
-        return ResponseEntity.ok(version);
-    }
-
-    /**
-     * Založení nové části přístupového bodu.
-     *
-     * @param accessPointId identifikátor přístupového bodu (PK)
-     * @param apVersion     verze přístupového bodu
-     * @param apPartFormVO  data pro vytvoření části
-     * @return CreatedPart
-     */
-    @Override
-    @Transactional
-    public ResponseEntity<CreatedPart> createPart(Integer accessPointId, Integer apVersion, ApPartFormVO apPartForm) {
-
-        ApAccessPoint accessPoint = accessPointService.getAccessPoint(accessPointId);
-        ApState state = accessPointService.getStateInternal(accessPoint);
-        ApRevision revision = revisionService.findRevisionByState(state);
-
-        CreatedPart result = new CreatedPart();
-        if (revision != null) {
-            // Permission check is part of revisionService
-            ApRevPart revPart = revisionService.createPart(state, revision, apPartForm); // TODO temporary cover
-            result.setPartId(revPart.getPartId());
-        } else {
-            accessPointService.checkPermissionForEdit(state);
-
-            ApPart apPart = partService.createPart(accessPoint, apPartForm);
-            accessPointService.generateSync(state, apPart);
-            apCacheService.createApCachedAccessPoint(accessPointId);
-
-            result.setPartId(apPart.getPartId());
-        }
-
-        result.setApVersion(accessPointService.lockAccessPoint(accessPointId, apVersion));
-        return ResponseEntity.ok(result);
-    }
+//    /**
+//     * Založení nové části přístupového bodu.
+//     *
+//     * @param accessPointId identifikátor přístupového bodu (PK)
+//     * @param apVersion     verze přístupového bodu
+//     * @param apPartFormVO  data pro vytvoření části
+//     * @return CreatedPart
+//     */
+//    @Override
+//    @Transactional
+//    public ResponseEntity<CreatedPart> createPart(Integer accessPointId, Integer apVersion, ApPartFormVO apPartForm) {
+//
+//        ApAccessPoint accessPoint = accessPointService.getAccessPoint(accessPointId);
+//        ApState state = accessPointService.getStateInternal(accessPoint);
+//        ApRevision revision = revisionService.findRevisionByState(state);
+//
+//        CreatedPart result = new CreatedPart();
+//        if (revision != null) {
+//            // Permission check is part of revisionService
+//            ApRevPart revPart = revisionService.createPart(state, revision, apPartForm); // TODO temporary cover
+//            result.setPartId(revPart.getPartId());
+//        } else {
+//            accessPointService.checkPermissionForEdit(state);
+//
+//            ApPart apPart = partService.createPart(accessPoint, apPartForm);
+//            accessPointService.generateSync(state, apPart);
+//            apCacheService.createApCachedAccessPoint(accessPointId);
+//
+//            result.setPartId(apPart.getPartId());
+//        }
+//
+//        result.setApVersion(accessPointService.lockAccessPoint(accessPointId, apVersion));
+//        return ResponseEntity.ok(result);
+//    }
 
     /**
      * Smazání části přístupového bodu.
@@ -252,52 +252,52 @@ public class AccessPointController implements AccesspointsApi {
         return ResponseEntity.ok(version);
     }
 
-    /**
-     * Úprava části přístupového bodu.
-     * 
-     * V případě revize:
-     * 
-     * <ul>
-     * <li>1. Zalozeni noveho itemu
-     * id = null
-     * objectId = null
-     * origObjectId = null
-     * <li>2. Zmena itemu
-     * id = itemId (z puvodniho part)
-     * objectId = objectId (z puvodniho part)
-     * origObjectId = null
-     * <li>3. Vymazani itemu
-     * item neprijde
-     * </ul>
-     * 
-     * @param accessPointId     identifikátor přístupového bodu (PK)
-     * @param partId            identifikátor upravované části
-     * @param apVersion verze přístupového bodu
-     * @param apPartFormVO      data pro úpravu části
-     * @return nová verze = verze + 1
-     */
-    @Override
-    @Transactional
-    public ResponseEntity<Integer> updatePart(Integer accessPointId, 
-                                              Integer partId,
-                                              Integer apVersion,
-                                              ApPartFormVO apPartFormVO) {
-
-        ApAccessPoint accessPoint = accessPointService.getAccessPoint(accessPointId);
-        ApState state = accessPointService.getStateInternal(accessPoint);
-        ApPart apPart = partService.getPart(partId);
-        ApRevision revision = revisionService.findRevisionByState(state);
-        if (revision != null) {
-            revisionService.updatePart(state, revision, apPart, apPartFormVO);
-        } else {
-            if (accessPointService.updatePart(accessPoint, state, apPart, apPartFormVO)) {
-                apCacheService.createApCachedAccessPoint(accessPointId);
-            }
-        }
-
-        Integer version = accessPointService.lockAccessPoint(accessPointId, apVersion);
-        return ResponseEntity.ok(version);
-    }
+//    /**
+//     * Úprava části přístupového bodu.
+//     * 
+//     * V případě revize:
+//     * 
+//     * <ul>
+//     * <li>1. Zalozeni noveho itemu
+//     * id = null
+//     * objectId = null
+//     * origObjectId = null
+//     * <li>2. Zmena itemu
+//     * id = itemId (z puvodniho part)
+//     * objectId = objectId (z puvodniho part)
+//     * origObjectId = null
+//     * <li>3. Vymazani itemu
+//     * item neprijde
+//     * </ul>
+//     * 
+//     * @param accessPointId     identifikátor přístupového bodu (PK)
+//     * @param partId            identifikátor upravované části
+//     * @param apVersion verze přístupového bodu
+//     * @param apPartFormVO      data pro úpravu části
+//     * @return nová verze = verze + 1
+//     */
+//    @Override
+//    @Transactional
+//    public ResponseEntity<Integer> updatePart(Integer accessPointId, 
+//                                              Integer partId,
+//                                              Integer apVersion,
+//                                              ApPartFormVO apPartFormVO) {
+//
+//        ApAccessPoint accessPoint = accessPointService.getAccessPoint(accessPointId);
+//        ApState state = accessPointService.getStateInternal(accessPoint);
+//        ApPart apPart = partService.getPart(partId);
+//        ApRevision revision = revisionService.findRevisionByState(state);
+//        if (revision != null) {
+//            revisionService.updatePart(state, revision, apPart, apPartFormVO);
+//        } else {
+//            if (accessPointService.updatePart(accessPoint, state, apPart, apPartFormVO)) {
+//                apCacheService.createApCachedAccessPoint(accessPointId);
+//            }
+//        }
+//
+//        Integer version = accessPointService.lockAccessPoint(accessPointId, apVersion);
+//        return ResponseEntity.ok(version);
+//    }
 
     /**
      * Nastavení preferovaného jména přístupového bodu.
@@ -329,34 +329,34 @@ public class AccessPointController implements AccesspointsApi {
         return ResponseEntity.ok(version);
     }
 
-    /**
-     * Aktualizace přístupového bodu.
-     *
-     * @param accessPointId identifikátor přístupového bodu
-     * @param apVersion     verze přístupového bodu
-     * @param editVo        upravovaná data přístupového bodu
-     * @return aktualizovaný záznam
-     */
-    @Override
-    @Transactional
-    public ResponseEntity<ApAccessPointVO> updateAccessPoint(Integer accessPointId, Integer apVersion, ApAccessPointEditVO editVo) {
-        Validate.notNull(accessPointId, "Identifikátor přístupového bodu musí být vyplněn");
-        Validate.notNull(editVo);
-
-        ApAccessPoint accessPoint = accessPointService.getAccessPointInternal(accessPointId);
-        ApState oldState = accessPointService.getStateInternal(accessPoint);
-        ApState newState = accessPointService.changeApType(accessPointId, editVo.getTypeId());
-
-        accessPointService.updateAndValidate(accessPointId);
-        apCacheService.createApCachedAccessPoint(accessPointId);
-        CachedAccessPoint cachedAccessPoint = apCacheService.findCachedAccessPoint(accessPointId);
-        Integer version = accessPointService.lockAccessPoint(accessPointId, apVersion);
-        if (cachedAccessPoint != null) {
-            cachedAccessPoint.setAccessPointVersion(version);
-            return ResponseEntity.ok(apFactory.createVO(cachedAccessPoint));
-        }
-        return ResponseEntity.ok(apFactory.createVO(newState, true));
-    }
+//    /**
+//     * Aktualizace přístupového bodu.
+//     *
+//     * @param accessPointId identifikátor přístupového bodu
+//     * @param apVersion     verze přístupového bodu
+//     * @param editVo        upravovaná data přístupového bodu
+//     * @return aktualizovaný záznam
+//     */
+//    @Override
+//    @Transactional
+//    public ResponseEntity<ApAccessPointVO> updateAccessPoint(Integer accessPointId, Integer apVersion, ApAccessPointEditVO editVo) {
+//        Validate.notNull(accessPointId, "Identifikátor přístupového bodu musí být vyplněn");
+//        Validate.notNull(editVo);
+//
+//        ApAccessPoint accessPoint = accessPointService.getAccessPointInternal(accessPointId);
+//        ApState oldState = accessPointService.getStateInternal(accessPoint);
+//        ApState newState = accessPointService.changeApType(accessPointId, editVo.getTypeId());
+//
+//        accessPointService.updateAndValidate(accessPointId);
+//        apCacheService.createApCachedAccessPoint(accessPointId);
+//        CachedAccessPoint cachedAccessPoint = apCacheService.findCachedAccessPoint(accessPointId);
+//        Integer version = accessPointService.lockAccessPoint(accessPointId, apVersion);
+//        if (cachedAccessPoint != null) {
+//            cachedAccessPoint.setAccessPointVersion(version);
+//            return ResponseEntity.ok(apFactory.createVO(cachedAccessPoint));
+//        }
+//        return ResponseEntity.ok(apFactory.createVO(newState, true));
+//    }
 
     @Override
     @Transactional
@@ -400,29 +400,29 @@ public class AccessPointController implements AccesspointsApi {
         return ResponseEntity.ok(version);
     }
 
-    /**
-     * Úprava části přístupového bodu z revize
-     *
-     * @param accessPointId identifikátor přístupového bodu (PK)
-     * @param partId        identifikátor upravované části
-     * @param apPartFormVO  data pro úpravu části
-     * @return nová verze = verze + 1
-     */
-    @Override
-    @Transactional
-    public ResponseEntity<Integer> updateRevisionPart(Integer accessPointId,
-                                   Integer partId,
-                                   Integer apVersion,
-                                   ApPartFormVO apPartFormVO) {
-
-        ApState state = accessPointService.getStateInternal(accessPointId);
-        ApRevision revision = revisionService.findRevisionByState(state);
-        ApRevPart revPart = revisionPartService.findById(partId);
-        revisionService.updatePart(state, revision, revPart, apPartFormVO);
-
-        Integer version = accessPointService.lockAccessPoint(accessPointId, apVersion);
-        return ResponseEntity.ok(version);
-    }
+//    /**
+//     * Úprava části přístupového bodu z revize
+//     *
+//     * @param accessPointId identifikátor přístupového bodu (PK)
+//     * @param partId        identifikátor upravované části
+//     * @param apPartFormVO  data pro úpravu části
+//     * @return nová verze = verze + 1
+//     */
+//    @Override
+//    @Transactional
+//    public ResponseEntity<Integer> updateRevisionPart(Integer accessPointId,
+//                                   Integer partId,
+//                                   Integer apVersion,
+//                                   ApPartFormVO apPartFormVO) {
+//
+//        ApState state = accessPointService.getStateInternal(accessPointId);
+//        ApRevision revision = revisionService.findRevisionByState(state);
+//        ApRevPart revPart = revisionPartService.findById(partId);
+//        revisionService.updatePart(state, revision, revPart, apPartFormVO);
+//
+//        Integer version = accessPointService.lockAccessPoint(accessPointId, apVersion);
+//        return ResponseEntity.ok(version);
+//    }
 
     @Override
     @Transactional
